k8s/service.yaml
#service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-api-service
  namespace: simple-api
spec:
  selector:
    app: simple-api
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
